[gd_scene load_steps=15 format=3 uid="uid://5vjpjn1wfq4y"]

[ext_resource type="Script" uid="uid://d0nyd4j5d50gb" path="res://addons/neon_page_controller/Scripts/Managers/PageController.gd" id="1_im342"]
[ext_resource type="Script" uid="uid://cxtgygsdw1bjq" path="res://addons/neon_page_controller/Scripts/Classes/Page.gd" id="2_kp7qs"]
[ext_resource type="FontFile" uid="uid://dknjoo38qw2m7" path="res://addons/neon_page_controller/Fonts/CreatoDisplay-Regular.otf" id="3_kp7qs"]
[ext_resource type="Script" uid="uid://cd17lmv2xcti1" path="res://addons/neon_page_controller/Scripts/Example/NeonPages-Example-PauseMenu.gd" id="4_ylhcp"]

[sub_resource type="Animation" id="Animation_w2wuu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_77nlj"]
resource_name = "close"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 648)]
}

[sub_resource type="Animation" id="Animation_ylhcp"]
resource_name = "open"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eerxl"]
_data = {
&"RESET": SubResource("Animation_w2wuu"),
&"close": SubResource("Animation_77nlj"),
&"open": SubResource("Animation_ylhcp")
}

[sub_resource type="Animation" id="Animation_sak88"]
resource_name = "close"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseBG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ObjectHolder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-440, 0)]
}

[sub_resource type="Animation" id="Animation_eerxl"]
resource_name = "open"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseBG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ObjectHolder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-440, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sak88"]
_data = {
&"close": SubResource("Animation_sak88"),
&"open": SubResource("Animation_eerxl")
}

[sub_resource type="Animation" id="Animation_ie7ld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Now Loading"]
}

[sub_resource type="Animation" id="Animation_3fn5d"]
resource_name = "loading"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.000193119, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Now Loading", "Now Loading.", "Now Loading..", "Now Loading..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_syl1o"]
_data = {
&"RESET": SubResource("Animation_ie7ld"),
&"loading": SubResource("Animation_3fn5d")
}

[node name="PageController(Example)" type="Node" node_paths=PackedStringArray("_pages")]
script = ExtResource("1_im342")
_start_page = 1
_pages = [NodePath("MainMenu"), NodePath("InGame"), NodePath("PauseMenu"), NodePath("LoadingScreen")]
metadata/_custom_type_script = "uid://d0nyd4j5d50gb"

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_kp7qs")
_page_type = 1
metadata/_custom_type_script = "uid://cxtgygsdw1bjq"

[node name="MainMenuNotify" type="RichTextLabel" parent="MainMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 225.0
offset_bottom = 304.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.580392, 0.72549, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_kp7qs")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "GAME TITLE
[font_size=15] (Currently on MainMenu Page!)"
horizontal_alignment = 1

[node name="ButtonHolder" type="HBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 348.0
offset_bottom = -246.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayGameButton" type="Button" parent="MainMenu/ButtonHolder"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.870588, 0.192157, 0.388235, 1)
theme_override_fonts/font = ExtResource("3_kp7qs")
text = "Start Game!"

[node name="InGame" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_kp7qs")
_page_type = 2
_animate = true
metadata/_custom_type_script = "uid://cxtgygsdw1bjq"

[node name="SceneNotify" type="RichTextLabel" parent="InGame"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 29.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.415686, 0.403922, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_kp7qs")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "You are currently in Game!"
horizontal_alignment = 1

[node name="ButtonHolder" type="HBoxContainer" parent="InGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 574.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Pause" type="Button" parent="InGame/ButtonHolder"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_kp7qs")
text = "Pause Game"

[node name="PageAnimator" type="AnimationPlayer" parent="InGame"]
libraries = {
&"": SubResource("AnimationLibrary_eerxl")
}

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_kp7qs")
_page_type = 3
_animate = true
metadata/_custom_type_script = "uid://cxtgygsdw1bjq"

[node name="PauseBG" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.243137)

[node name="PauseMenuBehaviour" type="Control" parent="PauseMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_ylhcp")

[node name="ObjectHolder" type="Control" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SceneNotify" type="RichTextLabel" parent="PauseMenu/ObjectHolder"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 79.0
offset_top = 130.0
offset_right = 40.0
offset_bottom = 209.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("3_kp7qs")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[color=\"33ff00\"] Game Paused."

[node name="MenuHolder" type="VBoxContainer" parent="PauseMenu/ObjectHolder"]
layout_mode = 0
offset_left = 79.0
offset_top = 348.0
offset_right = 229.0
offset_bottom = 460.0

[node name="Resume" type="Button" parent="PauseMenu/ObjectHolder/MenuHolder"]
custom_minimum_size = Vector2(150, 54)
layout_mode = 2
theme_override_colors/font_color = Color(0.870588, 0.192157, 0.388235, 1)
theme_override_fonts/font = ExtResource("3_kp7qs")
text = "Resume Game"

[node name="MainMenu" type="Button" parent="PauseMenu/ObjectHolder/MenuHolder"]
custom_minimum_size = Vector2(150, 54)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kp7qs")
text = "Quit to Main Menu"

[node name="PageAnimator" type="AnimationPlayer" parent="PauseMenu"]
libraries = {
&"": SubResource("AnimationLibrary_sak88")
}

[node name="LoadingScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_kp7qs")
_page_type = 4
metadata/_custom_type_script = "uid://cxtgygsdw1bjq"

[node name="Background" type="ColorRect" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0843996, 0.00011996, 0.194615, 1)

[node name="LoadingNotification" type="RichTextLabel" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -83.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_kp7qs")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Now Loading"
vertical_alignment = 2

[node name="LoadingSimulation" type="AnimationPlayer" parent="LoadingScreen/LoadingNotification"]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_syl1o")
}
autoplay = "loading"

[connection signal="button_down" from="MainMenu/ButtonHolder/PlayGameButton" to="PauseMenu/PauseMenuBehaviour" method="_on_play_game_button_button_down"]
[connection signal="button_down" from="InGame/ButtonHolder/Pause" to="PauseMenu/PauseMenuBehaviour" method="_on_pause_button_down"]
[connection signal="button_down" from="PauseMenu/ObjectHolder/MenuHolder/Resume" to="PauseMenu/PauseMenuBehaviour" method="_on_resume_button_down"]
[connection signal="button_down" from="PauseMenu/ObjectHolder/MenuHolder/MainMenu" to="PauseMenu/PauseMenuBehaviour" method="_on_main_menu_button_down"]
